--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.0",
+    "sass": "^1.50.0",
     "typescript": "~3.7.2"
+  },
+  "dependencies": {
+    "prop-types": "^15.8.1"
   }
 }
